# fura

./: .eslintignore  .eslintrc  .fatherrc.ts  .furarc  .gitignore  .swcrc  Cargo.toml  LICENSE  README.md  core.json  jest.config.ts  local  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.fura/: data.db  project_data.json
debug/: .fura.db
docs/: comment.md
src/: core.ts  database.rs  index.ts  lib.rs  main.rs  utils.ts
src/analysis/: README.md  analysis.ts  index.ts
src/ast/: README.md
src/cli/: index.ts  run.ts
src/cli/action/: run.ts
src/cli/helper/: type.ts  utils.ts
src/core/: index.ts  typing.ts  utils.ts
src/core/analysis/: js.ts
src/database/: README.md  sqlite.rs
src/database/sql/: init_table.sql  set_file_dir_relation.sql
src/helper/: ast_creator.ts  diskCache.ts  fileReader.ts  git.ts  logger.ts  mermaid.ts  utils.ts
src/helper/database/: index.ts  table.ts
src/helper/mermaid/: flowChats.ts  index.ts
src/parser/: astCreator.ts  index.ts  javascript.rs  mod.rs  typing.ts
src/parser/translator/: index.ts  js.ts
src/project/: init_base.rs  init_database.rs  mod.rs  reader.rs
src/project/analyze/: javascript.rs  js_file.rs  mod.rs
src/project/ast_parser/: javascript.rs
src/project/handler/: javascript.rs  mod.rs
src/sql/: init_table.sql
src/typings/: babel.ts  common.ts  utils.ts
src/utils/: mod.rs  module_specifier.rs
test/data/js/: imports.ts
tests/: parser.rs
