[package]
name = "fura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
lazy_static = "1.4.0"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
deno_ast = "0.27.2"
